--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 basic-testing-frontend/node_modules
 basic-testing-nodejs/node_modules
 basic-testing-nodejs-esmodules/node_modules
+async-code-starting-project/node_modules
+hooks/node_modules
