--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ basic-testing-nodejs/node_modules
 basic-testing-nodejs-esmodules/node_modules
 async-code-starting-project/node_modules
 hooks/node_modules
+mock_and_spices/node_modules
