--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ basic-testing-nodejs-esmodules/node_modules
 async-code-starting-project/node_modules
 hooks/node_modules
 mock_and_spices/node_modules
+mock/node_modules
